--- a/templates/config.j2
+++ b/templates/config.j2
@@ -46,6 +46,9 @@
 [[inputs.netstat]]
   # no configuration
 
+[[inputs.net]]
+  # no configuration
+
 [[inputs.cpu]]
   percpu = true
   totalcpu = true
