--- a/templates/config.j2
+++ b/templates/config.j2
@@ -10,7 +10,17 @@
   precision = "{{ telegraf_precision }}"
   debug = {{ telegraf_debug | lower }}
   quiet = {{ telegraf_quiet | lower }}
+  logtarget = "{{ telegraf_logtarget }}"
   logfile = "{{ telegraf_logfile }}"
+{% if telegraf_logfile_rotation_interval | default(False) %}
+  logfile_rotation_interval = "{{ telegraf_logfile_rotation_interval }}"
+{% endif %}
+{% if telegraf_logfile_rotation_max_size | default(False) %}
+  logfile_rotation_max_size = "{{ telegraf_logfile_rotation_max_size }}"
+{% endif %}
+{% if telegraf_logfile_rotation_max_archives | default(False) %}
+  logfile_rotation_max_archives = {{ telegraf_logfile_rotation_max_archives }}
+{% endif %}
   hostname = "{{ telegraf_hostname }}"
   omit_hostname = {{ telegraf_omit_hostname | lower }}
 
@@ -25,21 +35,48 @@
   listen = "{{ telegraf_prometheus_listen }}"
   basic_username = "{{ telegraf_prometheus_username }}"
   basic_password = "{{ telegraf_prometheus_password }}"
-{% if telegraf_plugins_default is defined and telegraf_plugins_default is iterable %}
-{% for item in telegraf_plugins_default %}
-{% if item.state | default("present") == "present" %}
+{% if telegraf_processors is defined and telegraf_processors is iterable %}
+{% for item in telegraf_processors %}
 
-[[inputs.{{ item.plugin }}]]
-{% if item.interval is defined %}
-    interval = "{{ item.interval }}s"
+[[processors.{{ item.plugin }}]]
+{% if item.config is defined and item.config is iterable %}
+{% for item in item.config %}
+  {{ item }}
+{% endfor %}
+{% else %}
+  # no configuration
+{% endif %}
+{% endfor %}
+{% endif %}
+{% if telegraf_aggregators is defined and telegraf_aggregators is iterable %}
+{% for item in telegraf_aggregators %}
+
+[[aggregators.{{ item.plugin }}]]
+{% if item.period | default(False) %}
+  period = "{{ item.interval }}s"
 {% endif %}
 {% if item.config is defined and item.config is iterable %}
 {% for item in item.config %}
-    {{ item }}
+  {{ item }}
 {% endfor %}
 {% else %}
-    # no configuration
+  # no configuration
 {% endif %}
+{% endfor %}
+{% endif %}
+{% if telegraf_plugins is defined and telegraf_plugins is iterable %}
+{% for item in telegraf_plugins %}
+
+[[inputs.{{ item.plugin }}]]
+{% if item.interval | default(False) %}
+  interval = "{{ item.interval }}s"
+{% endif %}
+{% if item.config is defined and item.config is iterable %}
+{% for item in item.config %}
+  {{ item }}
+{% endfor %}
+{% else %}
+  # no configuration
 {% endif %}
 {% endfor %}
 {% endif %}
